java 17 code changes